unpackaged/main/default/objects/VehicleStop__c/VehicleStop__c.object-meta.xml
<CustomObject>
    <label>Vehicle Stop</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Vehicle Stop Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Stops</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>