unpackaged/main/default/objects/VehicleStop__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vehicle Stops</relationshipLabel>
    <relationshipName>Vehicle_Stops</relationshipName>
    <type>Lookup</type>
</CustomField>