unpackaged/main/default/objects/VehicleStop__c/fields/ArrivalTime__c.field-meta.xml
<CustomField>
    <fullName>ArrivalTime__c</fullName>
    <label>Arrival Time</label>
    <type>DateTime</type>
</CustomField>