unpackaged/main/default/objects/VehicleStop__c/fields/Day__c.field-meta.xml
<CustomField>
    <fullName>Day__c</fullName>
    <formula>VehicleDailySummary__r.Day__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day</label>
    <type>Date</type>
</CustomField>