unpackaged/main/default/objects/VehicleStop__c/fields/Service_Order__c.field-meta.xml
<CustomField>
    <fullName>Service_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Vehicle Stops</relationshipLabel>
    <relationshipName>Vehicle_Stops</relationshipName>
    <type>Lookup</type>
</CustomField>