unpackaged/main/default/objects/VehicleStop__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle</label>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>Vehicle Stops</relationshipLabel>
    <relationshipName>Vehicle_Stops</relationshipName>
    <type>Lookup</type>
</CustomField>