unpackaged/main/default/objects/VehicleStop__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Vehicle__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>ArrivalTime__c</columns>
    <columns>DepartTime__c</columns>
    <columns>StopTime__c</columns>
    <columns>Day__c</columns>
    <columns>VehicleDailySummary__c</columns>
    <columns>Odometer__c</columns>
    <columns>Latitude__c</columns>
    <columns>Longitude__c</columns>
    <columns>Address__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>